# tauriAICoaching

./: .gitignore  BUSINESS_PLAN.md  README.md  ROADMAP.md  audit_report.md  index.html  package-lock.json  package.json  render.yaml  riot.txt  vite.config.ts
.github/workflows/: deploy-lp.yml  release.yml
audit_specs/: api_security_spec.md  auth_spec.md  license_spec.md
backend/: .env.example  db.js  package-lock.json  package.json  server.js
backend-remote/: db.js  license-store.js  package-lock.json  package.json  server.js
backend/routes/: auth.js  autorecord.js  coaching.js  heatmap.js  history.js
backend/services/: crypto.js  deathHeatmap.js  eventLog.js  killfeedAnalyzer.js  mapAssets.js  mapDetector.js  matchMonitor.js  minimapAnalyzer.js  recordingRetention.js  resultAnalyzer.js  riotApi.js  riotAuth.js  riotLocalApi.js  riotLockfile.js  riotMatchData.js  riotMonitor.js  screenCapture.js  screenMonitor.js  screenRecorder.js  sseRegistry.js  statsMerge.js  strands-agent.mjs  videoAnalyzer.js  yoloInference.js
backend/test/: heatmap.test.js  mockRiotServers.js  riot.test.js  timeline.test.js
docs/: SABR_REPLAY_ANALYSIS_PLAN.md  riot-api-mcp-migration-study.md
docs/legal/: privacy-policy.md  refund-policy.md  tokushoho.md
lp/: index.html  purchase-cancel.html  purchase-complete.html
lp/css/: style.css
lp/js/: checkout.js
lp/legal/: privacy-policy.html  refund-policy.html  tokushoho.html
research/: minimap_dot_spike.ipynb
spec/: integration-architecture.md  license-monetization.md
speca_config/: BUG_BOUNTY_SCOPE.json  TARGET_INFO.json
src/: App.tsx  api.ts  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: agent_knowledge.toml
src-tauri/src/: ai_provider.rs  lib.rs  license.rs  main.rs  prompt_builder.rs
src-tauri/src/commands/: ai.rs  license.rs  mod.rs  shell.rs
src/components/: AutoRecordScreen.tsx  FormScreen.tsx  HeatmapScreen.tsx  HistoryScreen.tsx  LoginScreen.tsx  MinimapReplay.tsx  ReplayScreen.tsx  ReportScreen.tsx  SettingsScreen.tsx  UpgradeModal.tsx
src/hooks/: useAutoRecord.ts  useHistory.ts  useMatchEvents.ts
src/utils/: timeline.ts
training/: requirements.txt
training/config/: valorant_minimap.yaml
training/notebooks/: train_minimap.ipynb
training/scripts/: 00_download_dataset.py  01_train_minimap.py  02_export_minimap.py  03_verify_minimap.py
