[package]
name = "valorant-ai-coaching"
version = "0.1.0"
description = "CoachMate for VALORANT — AI coaching desktop app"
authors = []
edition = "2021"

[lib]
name = "valorant_ai_coaching_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "valorant-ai-coaching"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
machine-uid = "0.5"
sha2 = "0.10"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
